Add GitHub Actions workflow for Jekyll site deployment and update site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: batra.blog # Replace with your blog title
+title: Parth Batra | batra.blog # Replace with your blog title
 author: Parth Batra # Replace with your name
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://parthbatra99.github.io" # replace yourusername with your GitHub username
 twitter_username: batra99 # Replace with your Twitter username
 github_username:  parth.batra99 # Replace with your GitHub username
 
