--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -3,10 +3,10 @@ name: Deploy Jekyll site to Pages
 on:
   push:
     branches:
-      - main
+      - main  # Adjust this to your default branch
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,10 +16,12 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.0' # Update Ruby version
+          ruby-version: 2.7
 
       - name: Install dependencies
-        run: bundle install
+        run: |
+          bundle install
+          sudo apt-get install -y build-essential
 
       - name: Build site
         run: bundle exec jekyll build
@@ -29,3 +31,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
+          destination_branch: gh-pages
+          allow_empty_commit: true
+          keep_files: false
