--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,12 @@ author: Parth Batra # Replace with your name
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://parthbatra99.github.io" # replace yourusername with your GitHub username
 twitter_username: batra99 # Replace with your Twitter username
-github_username:  parth.batra99 # Replace with your GitHub username
+github_username:  parthbatra99 # Replace with your GitHub username
+instagram_username: parthbatra__ # Replace with your Instagram username
+linkedin_username: parth-batra99 # Replace with your LinkedIn username
+description: Data scientist by day, music critic by night. Building ML systems, writing about tech, and collecting spotify minutes like they're infinity stones.
 
 theme: minima
-
 plugins:
   - jekyll-toc
 
