--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
   url: /blog/
 - title: Books
   url: /books/
-- title: List 100
-  url: /list-100/
+- title: 16.4
+  url: /list-16-4/
 - title: Projects
   url: /projects/
 
