Update navigation titles to include 'List' prefix for clarity; enhance progress tracker formatting

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   url: /blog/
 - title: Books
   url: /books/
-- title: 16.4
+- title: List 16.4
   url: /list-16-4/
 - title: Projects
   url: /projects/
