Add new sections for QuickWits, TheGoodStuff, and Workbench; update styles and remove outdated pages
- Created new HTML pages for QuickWits, TheGoodStuff, and Workbench with structured content and navigation.
- Added corresponding Markdown files for QuickWits, TheGoodStuff, and Workbench to maintain content consistency.
- Enhanced CSS styles for QuickWits section to improve readability and layout.
- Removed outdated pages: books.md and projects.md to streamline content.
- Updated list-100.md to refine reflections and remove unnecessary text.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,10 @@
 - title: Blog
   url: /blog/
-- title: Books
-  url: /books/
+- title: QuickWits
+  url: /quick-wits/
+- title: Workbench
+  url: /workbench/
+- title: TheGoodStuff
+  url: /the-good-stuff/
 - title: List 16.4
   url: /list-16-4/
-- title: Projects
-  url: /projects/
-
