Refactor blog navigation links for consistency and style; update content across multiple pages for clarity and engagement; enhance progress tracking visuals; refresh descriptions in "The Good Stuff" and "Workbench" sections; update last modified dates.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
-- title: Blog
+- title: ✍️ blog
   url: /blog/
-- title: QuickWits
+- title: quickwits
   url: /quick-wits/
-- title: Workbench
+- title: workbench
   url: /workbench/
-- title: TheGoodStuff
+- title: thegoodstuff
   url: /the-good-stuff/
-- title: List 16.4
+- title: the16.4
   url: /list-16-4/
