- title update - hooray!

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ twitter_username: batra99 # Replace with your Twitter username
 github_username:  parthbatra99 # Replace with your GitHub username
 instagram_username: parthbatra__ # Replace with your Instagram username
 linkedin_username: parth-batra99 # Replace with your LinkedIn username
-description: Data scientist by day, music critic by night. Building ML systems, writing about tech, and collecting spotify minutes like they're infinity stones.
+description: Senior ML Engineer by day, music critic by night. Building ML systems, writing about tech, and collecting spotify minutes like they're infinity stones.
 
 theme: minima
 plugins:
